@@ -10,6 +10,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import com.example.demo.auth.entity.User;
 
+import io.jsonwebtoken.lang.Collections;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
@@ -21,9 +22,7 @@ public class CustomUserDetails implements UserDetails{
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(
-				new SimpleGrantedAuthority(user.getRole())
-		);
+		return Collections.emptyList();
 	}
 
 	@Override
